compiler warnings (casts, access to static, forgotten valueOf,..), (#1262)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit 6d7fa3c5e96344bb279735bea22f93d30392e165)