@@ -41,6 +41,7 @@ public class Customizer implements SessionCustomizer, DescriptorCustomizer {
     static HashMap sessionCalls = new HashMap();
     static HashMap descriptorCalls = new HashMap();
 
+    @Override
     public void customize(Session session) throws Exception {
         String sessionName = session.getName();
         Integer numberOfCalls = (Integer)sessionCalls.get(sessionName);
@@ -54,6 +55,7 @@ public class Customizer implements SessionCustomizer, DescriptorCustomizer {
         session.getEventManager().addListener(new AcquireReleaseListener());
 
         session.getEventManager().addListener(new SessionEventAdapter() {
+            @Override
             public void postLogin(SessionEvent event) {
                 if (event.getSession().getPlatform().isPostgreSQL()) {
                     event.getSession().setQueryTimeoutDefault(0);
@@ -72,7 +74,7 @@ public class Customizer implements SessionCustomizer, DescriptorCustomizer {
             Class[] sopEntities = {Employee.class, Address.class, Project.class};
             for (Class sopEntity : sopEntities) {
                 ClassDescriptor descriptor = session.getDescriptor(sopEntity);
-                Object sop = sopClass.newInstance();
+                Object sop = sopClass.getConstructor().newInstance();
                 if (isRecoverable) {
                     setIsRecoverableMethod.invoke(sop, new Object[] {true});
                 }
@@ -85,6 +87,7 @@ public class Customizer implements SessionCustomizer, DescriptorCustomizer {
         }
     }
 
+    @Override
     public void customize(ClassDescriptor descriptor) {
         String javaClassName = descriptor.getJavaClass().getName();
         Integer numberOfCalls = (Integer)descriptorCalls.get(javaClassName);
@@ -219,6 +222,7 @@ public class Customizer implements SessionCustomizer, DescriptorCustomizer {
     }
     //**temp
     static class AcquireReleaseListener extends SessionEventAdapter {
+        @Override
         public void postAcquireConnection(SessionEvent event) {
             DatasourceAccessor accessor = (DatasourceAccessor)event.getResult();
             try {
@@ -233,6 +237,7 @@ public class Customizer implements SessionCustomizer, DescriptorCustomizer {
                 throw ex;
             }
         }
+        @Override
         public void preReleaseConnection(SessionEvent event) {
             DatasourceAccessor accessor = (DatasourceAccessor)event.getResult();
             try {
